<resources>
    <string name="app_name">Taller3_Mendez_Useche</string>

    <string name="txtMaps">Mapa de Google</string>
    <string name="btnSeguir">Seguir</string>

    <string name="txtIngreso">Ingresar</string>
    <string name="hintCodigo">Codigo: </string>
    <string name="hintCorreo">Correo: </string>
    <string name="btnVerificar">Verificar Nota</string>

    <string name="txtInformacion">Información</string>
    <string name="txtCorreo">Correo:</string>
    <string name="txtCodigo">Código:</string>
    <string name="txtNota">Nota:</string>
</resources>